src/editor/vscode-plugin/src/parser/ArcSourceCodeParser.ts
// Generated from src/parser/ArcSourceCodeParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ArcSourceCodeParserListener } from "./ArcSourceCodeParserListener";
import { ArcSourceCodeParserVisitor } from "./ArcSourceCodeParserVisitor";


export class ArcSourceCodeParser extends Parser {
	public static readonly PLUS = 1;
	public static readonly MINUS = 2;
	public static readonly MULTIPLY = 3;
	public static readonly DIVIDE = 4;
	public static readonly MODULO = 5;
	public static readonly BITWISE_AND = 6;
	public static readonly BITWISE_OR = 7;
	public static readonly BITWISE_LSHIFT = 8;
	public static readonly BITWISE_RSHIFT = 9;
	public static readonly BITWISE_XOR = 10;
	public static readonly BITWISE_NOT = 11;
	public static readonly COMP_OBJ_EQ = 12;
	public static readonly COMP_REF_EQ = 13;
	public static readonly COMP_OBJ_NEQ = 14;
	public static readonly COMP_REF_NEQ = 15;
	public static readonly COMP_LT = 16;
	public static readonly COMP_GT = 17;
	public static readonly COMP_LTE = 18;
	public static readonly COMP_GTE = 19;
	public static readonly LOGICAL_AND = 20;
	public static readonly LOGICAL_OR = 21;
	public static readonly LOGICAL_NOT = 22;
	public static readonly ASSIGN = 23;
	public static readonly ASSIGN_IF_NULL = 24;
	public static readonly SELF_INCREMENT = 25;
	public static readonly SELF_DECREMENT = 26;
	public static readonly INCREASE_BY = 27;
	public static readonly DECREASE_BY = 28;
	public static readonly MULTIPLY_BY = 29;
	public static readonly DIVIDE_BY = 30;
	public static readonly MOD_BY = 31;
	public static readonly LPAREN = 32;
	public static readonly RPAREN = 33;
	public static readonly LBRACKET = 34;
	public static readonly RBRACKET = 35;
	public static readonly LBRACE = 36;
	public static readonly RBRACE = 37;
	public static readonly QUESTION = 38;
	public static readonly SEMICOLON = 39;
	public static readonly RANGE = 40;
	public static readonly AT = 41;
	public static readonly COMMA = 42;
	public static readonly PIPE = 43;
	public static readonly NULL_COALESCING = 44;
	public static readonly COLON = 45;
	public static readonly DOT = 46;
	public static readonly ARROW = 47;
	public static readonly OPTIONAL_CHAIN = 48;
	public static readonly SCOPE = 49;
	public static readonly KW_IF = 50;
	public static readonly KW_ELIF = 51;
	public static readonly KW_ELSE = 52;
	public static readonly KW_WHILE = 53;
	public static readonly KW_FOR = 54;
	public static readonly KW_LOOP = 55;
	public static readonly KW_FOREACH = 56;
	public static readonly KW_IN = 57;
	public static readonly KW_BREAK = 58;
	public static readonly KW_CONTINUE = 59;
	public static readonly KW_RETURN = 60;
	public static readonly KW_THROW = 61;
	public static readonly KW_TRY = 62;
	public static readonly KW_CATCH = 63;
	public static readonly KW_FINALLY = 64;
	public static readonly KW_MATCH = 65;
	public static readonly KW_CASE = 66;
	public static readonly KW_GET = 67;
	public static readonly KW_SET = 68;
	public static readonly KW_DEFAULT = 69;
	public static readonly KW_AWAIT = 70;
	public static readonly KW_ASYNC = 71;
	public static readonly KW_FUNCTION = 72;
	public static readonly KW_GROUP = 73;
	public static readonly KW_FIELD = 74;
	public static readonly KW_CONSTRUCTOR = 75;
	public static readonly KW_DESTRUCTOR = 76;
	public static readonly KW_OPERATOR = 77;
	public static readonly KW_PUBLIC = 78;
	public static readonly KW_INTERNAL = 79;
	public static readonly KW_PROTECTED = 80;
	public static readonly KW_PRIVATE = 81;
	public static readonly KW_STATIC = 82;
	public static readonly KW_CONSTANT = 83;
	public static readonly KW_VARIABLE = 84;
	public static readonly KW_VALUE = 85;
	public static readonly KW_REFERENCE = 86;
	public static readonly KW_CLONE = 87;
	public static readonly KW_CALL = 88;
	public static readonly KW_NEW = 89;
	public static readonly KW_DEFER = 90;
	public static readonly KW_MACRO = 91;
	public static readonly KW_NAMESPACE = 92;
	public static readonly KW_LINK = 93;
	public static readonly KW_TRUE = 94;
	public static readonly KW_FALSE = 95;
	public static readonly KW_NONE = 96;
	public static readonly KW_ANY = 97;
	public static readonly KW_INFER = 98;
	public static readonly KW_CHAR = 99;
	public static readonly KW_BOOL = 100;
	public static readonly KW_BYTE = 101;
	public static readonly KW_INT = 102;
	public static readonly KW_DECIMAL = 103;
	public static readonly KW_STRING = 104;
	public static readonly KW_DISPOSE = 105;
	public static readonly KW_WITH = 106;
	public static readonly KW_LIFETIME = 107;
	public static readonly KW_TYPEOF = 108;
	public static readonly KW_SELF = 109;
	public static readonly KW_ENUM = 110;
	public static readonly LITERAL_STRING = 111;
	public static readonly WHITESPACE = 112;
	public static readonly LINE_COMMENT = 113;
	public static readonly IDENTIFIER = 114;
	public static readonly NUMBER = 115;
	public static readonly RULE_arc_compilation_unit = 0;
	public static readonly RULE_arc_accessibility = 1;
	public static readonly RULE_arc_mutability = 2;
	public static readonly RULE_arc_namespace_identifier = 3;
	public static readonly RULE_arc_namespace_declarator = 4;
	public static readonly RULE_arc_namespace_limiter = 5;
	public static readonly RULE_arc_single_identifier = 6;
	public static readonly RULE_arc_full_identifier = 7;
	public static readonly RULE_arc_flexible_identifier = 8;
	public static readonly RULE_arc_primitive_data_type = 9;
	public static readonly RULE_arc_array_indicator = 10;
	public static readonly RULE_arc_data_type = 11;
	public static readonly RULE_arc_data_declarator = 12;
	public static readonly RULE_arc_self_data_declarator = 13;
	public static readonly RULE_arc_arg_list = 14;
	public static readonly RULE_arc_wrapped_arg_list = 15;
	public static readonly RULE_arc_param_list = 16;
	public static readonly RULE_arc_wrapped_param_list = 17;
	public static readonly RULE_arc_annotation = 18;
	public static readonly RULE_arc_function_declarator = 19;
	public static readonly RULE_arc_function_call_base = 20;
	public static readonly RULE_arc_wrapped_function_body = 21;
	public static readonly RULE_arc_function_block = 22;
	public static readonly RULE_arc_bool_value = 23;
	public static readonly RULE_arc_instant_value = 24;
	public static readonly RULE_arc_type_value = 25;
	public static readonly RULE_arc_data_value = 26;
	public static readonly RULE_arc_constructor_call = 27;
	public static readonly RULE_arc_statement = 28;
	public static readonly RULE_arc_stmt_link = 29;
	public static readonly RULE_arc_stmt_return = 30;
	public static readonly RULE_arc_stmt_decl = 31;
	public static readonly RULE_arc_stmt_assign = 32;
	public static readonly RULE_arc_stmt_break = 33;
	public static readonly RULE_arc_stmt_continue = 34;
	public static readonly RULE_arc_stmt_call = 35;
	public static readonly RULE_arc_stmt_while = 36;
	public static readonly RULE_arc_stmt_for = 37;
	public static readonly RULE_arc_stmt_loop = 38;
	public static readonly RULE_arc_stmt_foreach = 39;
	public static readonly RULE_arc_stmt_throw = 40;
	public static readonly RULE_arc_stmt_if = 41;
	public static readonly RULE_arc_expression = 42;
	public static readonly RULE_arc_wrapped_expression = 43;
	public static readonly RULE_arc_namespace_block = 44;
	public static readonly RULE_arc_namespace_member = 45;
	public static readonly RULE_arc_group_block = 46;
	public static readonly RULE_arc_group_derive_list = 47;
	public static readonly RULE_arc_wrapped_group_member = 48;
	public static readonly RULE_arc_group_member = 49;
	public static readonly RULE_arc_group_field = 50;
	public static readonly RULE_arc_group_function = 51;
	public static readonly RULE_arc_group_lifecycle_keyword = 52;
	public static readonly RULE_arc_group_lifecycle_function = 53;
	public static readonly RULE_arc_index = 54;
	public static readonly RULE_arc_call_chain = 55;
	public static readonly RULE_arc_call_chain_term = 56;
	public static readonly RULE_arc_self_wrapper = 57;
	public static readonly RULE_arc_generic_declaration_wrapper = 58;
	public static readonly RULE_arc_generic_specialization_wrapper = 59;
	public static readonly RULE_arc_enum_declarator = 60;
	public static readonly RULE_arc_enum_member = 61;
	public static readonly RULE_arc_enum_accessor = 62;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"arc_compilation_unit", "arc_accessibility", "arc_mutability", "arc_namespace_identifier", 
		"arc_namespace_declarator", "arc_namespace_limiter", "arc_single_identifier", 
		"arc_full_identifier", "arc_flexible_identifier", "arc_primitive_data_type", 
		"arc_array_indicator", "arc_data_type", "arc_data_declarator", "arc_self_data_declarator", 
		"arc_arg_list", "arc_wrapped_arg_list", "arc_param_list", "arc_wrapped_param_list", 
		"arc_annotation", "arc_function_declarator", "arc_function_call_base", 
		"arc_wrapped_function_body", "arc_function_block", "arc_bool_value", "arc_instant_value", 
		"arc_type_value", "arc_data_value", "arc_constructor_call", "arc_statement", 
		"arc_stmt_link", "arc_stmt_return", "arc_stmt_decl", "arc_stmt_assign", 
		"arc_stmt_break", "arc_stmt_continue", "arc_stmt_call", "arc_stmt_while", 
		"arc_stmt_for", "arc_stmt_loop", "arc_stmt_foreach", "arc_stmt_throw", 
		"arc_stmt_if", "arc_expression", "arc_wrapped_expression", "arc_namespace_block", 
		"arc_namespace_member", "arc_group_block", "arc_group_derive_list", "arc_wrapped_group_member", 
		"arc_group_member", "arc_group_field", "arc_group_function", "arc_group_lifecycle_keyword", 
		"arc_group_lifecycle_function", "arc_index", "arc_call_chain", "arc_call_chain_term", 
		"arc_self_wrapper", "arc_generic_declaration_wrapper", "arc_generic_specialization_wrapper", 
		"arc_enum_declarator", "arc_enum_member", "arc_enum_accessor",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'<<'", "'>>'", 
		"'^'", "'~'", "'=='", "'==='", "'<>'", "'<!>'", "'<'", "'>'", "'<='", 
		"'>='", "'&&'", "'||'", "'!'", "'='", "'??='", "'++'", "'--'", "'+='", 
		"'-='", "'*='", "'/='", "'%='", "'('", "')'", "'['", "']'", "'{'", "'}'", 
		"'?'", "';'", "'..'", "'@'", "','", "'|>'", "'??'", "':'", "'.'", "'=>'", 
		"'?.'", "'::'", "'if'", "'elif'", "'else'", "'while'", "'for'", "'loop'", 
		"'foreach'", "'in'", "'break'", "'continue'", "'return'", "'throw'", "'try'", 
		"'catch'", "'finally'", "'match'", "'case'", "'get'", "'set'", "'default'", 
		"'await'", "'async'", "'func'", "'group'", "'field'", "'constructor'", 
		"'destructor'", "'operator'", "'public'", "'internal'", "'protected'", 
		"'private'", "'static'", "'const'", "'var'", "'val'", "'ref'", "'clone'", 
		"'call'", "'new'", "'defer'", "'macro'", "'namespace'", "'link'", "'true'", 
		"'false'", "'none'", "'any'", "'infer'", "'char'", "'bool'", "'byte'", 
		"'int'", "'decimal'", "'string'", "'dispose'", "'with'", "'lifetime'", 
		"'typeof'", "'self'", "'enum'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "BITWISE_AND", 
		"BITWISE_OR", "BITWISE_LSHIFT", "BITWISE_RSHIFT", "BITWISE_XOR", "BITWISE_NOT", 
		"COMP_OBJ_EQ", "COMP_REF_EQ", "COMP_OBJ_NEQ", "COMP_REF_NEQ", "COMP_LT", 
		"COMP_GT", "COMP_LTE", "COMP_GTE", "LOGICAL_AND", "LOGICAL_OR", "LOGICAL_NOT", 
		"ASSIGN", "ASSIGN_IF_NULL", "SELF_INCREMENT", "SELF_DECREMENT", "INCREASE_BY", 
		"DECREASE_BY", "MULTIPLY_BY", "DIVIDE_BY", "MOD_BY", "LPAREN", "RPAREN", 
		"LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "QUESTION", "SEMICOLON", "RANGE", 
		"AT", "COMMA", "PIPE", "NULL_COALESCING", "COLON", "DOT", "ARROW", "OPTIONAL_CHAIN", 
		"SCOPE", "KW_IF", "KW_ELIF", "KW_ELSE", "KW_WHILE", "KW_FOR", "KW_LOOP", 
		"KW_FOREACH", "KW_IN", "KW_BREAK", "KW_CONTINUE", "KW_RETURN", "KW_THROW", 
		"KW_TRY", "KW_CATCH", "KW_FINALLY", "KW_MATCH", "KW_CASE", "KW_GET", "KW_SET", 
		"KW_DEFAULT", "KW_AWAIT", "KW_ASYNC", "KW_FUNCTION", "KW_GROUP", "KW_FIELD", 
		"KW_CONSTRUCTOR", "KW_DESTRUCTOR", "KW_OPERATOR", "KW_PUBLIC", "KW_INTERNAL", 
		"KW_PROTECTED", "KW_PRIVATE", "KW_STATIC", "KW_CONSTANT", "KW_VARIABLE", 
		"KW_VALUE", "KW_REFERENCE", "KW_CLONE", "KW_CALL", "KW_NEW", "KW_DEFER", 
		"KW_MACRO", "KW_NAMESPACE", "KW_LINK", "KW_TRUE", "KW_FALSE", "KW_NONE", 
		"KW_ANY", "KW_INFER", "KW_CHAR", "KW_BOOL", "KW_BYTE", "KW_INT", "KW_DECIMAL", 
		"KW_STRING", "KW_DISPOSE", "KW_WITH", "KW_LIFETIME", "KW_TYPEOF", "KW_SELF", 
		"KW_ENUM", "LITERAL_STRING", "WHITESPACE", "LINE_COMMENT", "IDENTIFIER", 
		"NUMBER",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ArcSourceCodeParser._LITERAL_NAMES, ArcSourceCodeParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ArcSourceCodeParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "ArcSourceCodeParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return ArcSourceCodeParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ArcSourceCodeParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ArcSourceCodeParser._ATN, this);
	}
	// @RuleVersion(0)
	public arc_compilation_unit(): Arc_compilation_unitContext {
		let _localctx: Arc_compilation_unitContext = new Arc_compilation_unitContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ArcSourceCodeParser.RULE_arc_compilation_unit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 129;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ArcSourceCodeParser.KW_LINK) {
				{
				{
				this.state = 126;
				this.arc_stmt_link();
				}
				}
				this.state = 131;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 132;
			this.arc_namespace_block();
			this.state = 133;
			this.match(ArcSourceCodeParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arc_accessibility(): Arc_accessibilityContext {
		let _localctx: Arc_accessibilityContext = new Arc_accessibilityContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ArcSourceCodeParser.RULE_arc_accessibility);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 135;
			_la = this._input.LA(1);
			if (!(((((_la - 78)) & ~0x1F) === 0 && ((1 << (_la - 78)) & ((1 << (ArcSourceCodeParser.KW_PUBLIC - 78)) | (1 << (ArcSourceCodeParser.KW_INTERNAL - 78)) | (1 << (ArcSourceCodeParser.KW_PROTECTED - 78)) | (1 << (ArcSourceCodeParser.KW_PRIVATE - 78)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arc_mutability(): Arc_mutabilityContext {
		let _localctx: Arc_mutabilityContext = new Arc_mutabilityContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ArcSourceCodeParser.RULE_arc_mutability);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			_la = this._input.LA(1);
			if (!(_la === ArcSourceCodeParser.KW_CONSTANT || _la === ArcSourceCodeParser.KW_VARIABLE)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arc_namespace_identifier(): Arc_namespace_identifierContext {
		let _localctx: Arc_namespace_identifierContext = new Arc_namespace_identifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ArcSourceCodeParser.RULE_arc_namespace_identifier);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 139;
			this.match(ArcSourceCodeParser.IDENTIFIER);
			this.state = 144;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ArcSourceCodeParser.SCOPE) {
				{
				{
				this.state = 140;
				this.match(ArcSourceCodeParser.SCOPE);
				this.state = 141;
				this.match(ArcSourceCodeParser.IDENTIFIER);
				}
				}
				this.state = 146;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arc_namespace_declarator(): Arc_namespace_declaratorContext {
		let _localctx: Arc_namespace_declaratorContext = new Arc_namespace_declaratorContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ArcSourceCodeParser.RULE_arc_namespace_declarator);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 147;
			this.match(ArcSourceCodeParser.KW_NAMESPACE);
			this.state = 148;
			this.arc_namespace_identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arc_namespace_limiter(): Arc_namespace_limiterContext {
		let _localctx: Arc_namespace_limiterContext = new Arc_namespace_limiterContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ArcSourceCodeParser.RULE_arc_namespace_limiter);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 150;
			this.match(ArcSourceCodeParser.LBRACKET);
			this.state = 151;
			this.arc_namespace_identifier();
			this.state = 152;
			this.match(ArcSourceCodeParser.RBRACKET);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arc_single_identifier(): Arc_single_identifierContext {
		let _localctx: Arc_single_identifierContext = new Arc_single_identifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, ArcSourceCodeParser.RULE_arc_single_identifier);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			this.match(ArcSourceCodeParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arc_full_identifier(): Arc_full_identifierContext {
		let _localctx: Arc_full_identifierContext = new Arc_full_identifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, ArcSourceCodeParser.RULE_arc_full_identifier);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			this.arc_namespace_limiter();
			this.state = 157;
			this.match(ArcSourceCodeParser.DOT);
			this.state = 158;
			this.arc_single_identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arc_flexible_identifier(): Arc_flexible_identifierContext {
		let _localctx: Arc_flexible_identifierContext = new Arc_flexible_identifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, ArcSourceCodeParser.RULE_arc_flexible_identifier);
		try {
			this.state = 162;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ArcSourceCodeParser.LBRACKET:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 160;
				this.arc_full_identifier();
				}
				break;
			case ArcSourceCodeParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 161;
				this.arc_single_identifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arc_primitive_data_type(): Arc_primitive_data_typeContext {
		let _localctx: Arc_primitive_data_typeContext = new Arc_primitive_data_typeContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, ArcSourceCodeParser.RULE_arc_primitive_data_type);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
